# hack_nvidia

./: .gitignore  CLAUDE.md  README.md  main.py  note.md  package-lock.json  pyproject.toml  scrape_tabs.js
.claude/: settings.json
docs/: finsecurity.md  prd.md
docs/idea/: main_idea.md
docs/idea_history/: ideas.md
docs/manuscript/: intro.md
docs/material/: 01_common.md  02_nim_nemotron.md  03_nemo_agent_toolkit.md  04_nemoclaw.md  05_megatron_bridge.md  06_nemo_rl.md  07_nemo_data_designer.md  08_nemo_curator.md
docs/material/raw/: 01_common.txt  02_nim_nemotron.txt  03_nemo_agent_toolkit.txt  04_nemoclaw.txt  05_megatron_bridge.txt  06_nemo_rl.txt  07_nemo_data_designer.txt  (+1 more)
docs/security_in_finance/: benchmarks.md
docs/self_evolving/: self_evolving.md
docs/synthetic_data/: trend.md
docs/track_c/: curator.md  data_designer.md  judge.md
preparation/: prep.md
presentation/: index.html  serve.py
results/finsecurity_self_evolving/: progress.json  strategy_history.json
results/harmbench_heuristic/: details.json  summary.json
results/harmbench_self_evolving/: progress.json  strategy_history.json
src/: eval_baseline.py  eval_baseline_finsec.py  run_experiment.py  run_experiment_finsec.py  test_synth.py
src/evaluators/: __init__.py  base.py  finsecurity.py  harmbench_copyright.py
src/llm/: __init__.py  base.py  friendli.py  nemotron.py  openai.py
src/synthesizers/: __init__.py  base.py  evol_instruct_synthesizer.py  finsec_evol_instruct.py  finsec_heuristic.py  finsec_self_evolving.py  heuristic_synthesizer.py  self_evolving_synthesizer.py
(+101 files in other folders)
